fix fill script to work with polylines properly, ensure valid geojson is being produced for route_coords

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -203,26 +203,18 @@
     "    [get_one_marker(loc, \"green\").add_to(curr_map) for loc in trip[\"start_loc\"]]\n",
     "    [get_one_marker(loc, \"red\").add_to(curr_map) for loc in trip[\"end_loc\"]]\n",
     "    \n",
-    "    # trips from relations won't have waypoints\n",
-    "    if \"waypoint_coords\" in trip:\n",
-    "        if isinstance(waypoint_coords := trip[\"waypoint_coords\"], dict):\n",
-    "            add_waypoint_markers(waypoint_coords, curr_map)\n",
-    "        else:\n",
-    "            for w in waypoint_coords:\n",
-    "                add_waypoint_markers(w, curr_map)\n",
-    "    \n",
     "    # iterate over all reroutes\n",
     "    for rc in trip[\"route_coords\"]:\n",
-    "        for coords in rc[\"geometry\"][\"coordinates\"]:\n",
-    "            print(\"Found %d coordinates for the route\" % (len(coords)))\n",
+    "        coords = rc[\"geometry\"][\"coordinates\"]\n",
+    "        print(\"Found %d coordinates for the route\" % (len(coords)))\n",
+    "        \n",
+    "        latlng_coords = [lonlat_swap(c) for c in coords]\n",
+    "        folium.PolyLine(latlng_coords, popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
+    "        \n",
+    "        for i, c in enumerate(latlng_coords):\n",
+    "            folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
     "            \n",
-    "            latlng_coords = [lonlat_swap(c) for c in coords]\n",
-    "            folium.PolyLine(latlng_coords, popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
-    "            \n",
-    "            for i, c in enumerate(latlng_coords):\n",
-    "                folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
-    "            \n",
-    "            curr_map.fit_bounds(ful.get_bounds(latlng_coords))\n",
+    "        curr_map.fit_bounds(ful.get_bounds(latlng_coords))\n",
     "    \n",
     "    return curr_map"
    ]
@@ -283,29 +275,28 @@
    "source": [
     "def check_start_end_contains(leg):\n",
     "    for rc in leg[\"route_coords\"]:\n",
-    "        for coords in rc[\"geometry\"][\"coordinates\"]:\n",
-    "            for sloc in leg[\"start_loc\"]:\n",
-    "                for eloc in leg[\"end_loc\"]:\n",
-    "                    points = gpd.GeoSeries([shpg.Point(p) for p in coords])\n",
-    "                    start_loc = shpg.shape(sloc[\"geometry\"])\n",
-    "                    end_loc = shpg.shape(eloc[\"geometry\"])\n",
-    "                    start_contains = points.apply(lambda p: start_loc.contains(p))\n",
-    "                    print(points[start_contains])\n",
-    "                    end_contains = points.apply(lambda p: end_loc.contains(p))\n",
-    "                    print(points[end_contains])\n",
-    "                    # Some of the points are within the start and end polygons\n",
-    "                    assert start_contains.any()\n",
-    "                    assert end_contains.any()\n",
+    "        points = gpd.GeoSeries([shpg.Point(p) for p in rc[\"geometry\"][\"coordinates\"]])\n",
+    "        for sloc in leg[\"start_loc\"]:\n",
+    "            for eloc in leg[\"end_loc\"]:\n",
+    "                start_loc = shpg.shape(sloc[\"geometry\"])\n",
+    "                end_loc = shpg.shape(eloc[\"geometry\"])\n",
+    "                start_contains = points.apply(lambda p: start_loc.contains(p))\n",
+    "                print(points[start_contains])\n",
+    "                end_contains = points.apply(lambda p: end_loc.contains(p))\n",
+    "                print(points[end_contains])\n",
+    "                # Some of the points are within the start and end polygons\n",
+    "                assert start_contains.any()\n",
+    "                assert end_contains.any()\n",
     "    \n",
-    "                    # The first and last point are within the start and end polygons\n",
-    "                    assert start_contains.iloc[0], points.head()\n",
-    "                    assert end_contains.iloc[-1], points.tail()\n",
+    "                # The first and last point are within the start and end polygons\n",
+    "                assert start_contains.iloc[0], points.head()\n",
+    "                assert end_contains.iloc[-1], points.tail()\n",
     "    \n",
-    "                    # The points within the polygons are contiguous\n",
-    "                    max_index_diff_start = pd.Series(start_contains[start_contains == True].index).diff().max()\n",
-    "                    max_index_diff_end = pd.Series(end_contains[end_contains == True].index).diff().max()\n",
-    "                    assert pd.isnull(max_index_diff_start) or max_index_diff_start == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(start_contains[end_contains == True].index).diff().max(), points.head())\n",
-    "                    assert pd.isnull(max_index_diff_end) or max_index_diff_end == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(end_contains[end_contains == True].index).diff().max(), points.tail())"
+    "                # The points within the polygons are contiguous\n",
+    "                max_index_diff_start = pd.Series(start_contains[start_contains == True].index).diff().max()\n",
+    "                max_index_diff_end = pd.Series(end_contains[end_contains == True].index).diff().max()\n",
+    "                assert pd.isnull(max_index_diff_start) or max_index_diff_start == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(start_contains[end_contains == True].index).diff().max(), points.head())\n",
+    "                assert pd.isnull(max_index_diff_end) or max_index_diff_end == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(end_contains[end_contains == True].index).diff().max(), points.tail())"
    ]
   },
   {
