Add in the check for the rerouted entries as well
In case of reroute, the first polyline should match the original entry and the
second polyline should match the new entry. With this, we have more failures :)

--- a/spec_creation/Verify_rerouted_entries.ipynb
+++ b/spec_creation/Verify_rerouted_entries.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "original_route = json.load(open(\"final_sfbayarea_filled/train_bus_ebike_mtv_ucb.filled.json\"))\n",
-    "sm_reroute = json.load(open(\"final_sfbayarea_filled_reroutes/train_bus_ebike_mtv_ucb.filled.reroute.json\"))"
+    "sm_reroute = json.load(open(\"final_sfbayarea_filled/train_bus_ebike_sm_reroute_mtv_ucb.filled.json\"))"
    ]
   },
   {
@@ -154,9 +154,19 @@
     "    if len(l[key]) == 1:\n",
     "        # print(l[key][0][\"geometry\"][\"coordinates\"])\n",
     "        # print(orig_l[key][\"geometry\"][\"coordinates\"])\n",
-    "        return check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], orig_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        # No reroute. The combo fields should be equal to both original and rerouted fields, and they should be equal to each other\n",
+    "        combo_orig = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], orig_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        combo_reroute = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        orig_reroute = check_coordinates(orig_l[key][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        print(combo_orig, combo_reroute, orig_reroute)\n",
+    "        return combo_orig and combo_reroute and orig_reroute\n",
     "    if len(l[key]) > 1:\n",
-    "        return True"
+    "        # Reroute. Only two reroutes supported. The first combo fields should be equal to original and the second should be the rerouted\n",
+    "        assert len(l[key]) == 2, \"Only two reroutes at this time, so use a simple check\"\n",
+    "        combo_orig = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], orig_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        combo_reroute = check_coordinates(l[key][1][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        print(combo_orig, combo_reroute)\n",
+    "        return combo_orig and combo_reroute"
    ]
   },
   {
@@ -177,7 +187,7 @@
     "    if len(invalid_feature_list) > 0:\n",
     "        print(\"!! Travel Leg %s in trip %s has invalid keys %s !!\" % (l[\"id\"], t[\"id\"], invalid_feature_list))\n",
     "    else: \n",
-    "        print(\"Travel Leg %s in trip %s has no reroutes\" % (l[\"id\"], t[\"id\"]))"
+    "        print(\"Travel Leg %s in trip %s matches previous trajectories\" % (l[\"id\"], t[\"id\"]))"
    ]
   },
   {
