fix float comparisons

--- a/spec_creation/Verify_rerouted_entries.ipynb
+++ b/spec_creation/Verify_rerouted_entries.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import json\n",
     "import polyline as pl\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from math import isclose"
    ]
   },
   {
@@ -115,7 +116,7 @@
     "        return False\n",
     "    else:\n",
     "        for i, (e1, e2) in enumerate(zip(l1, l2)):\n",
-    "            if e1 != e2:\n",
+    "            if not isclose(e1[0], e2[0], rel_tol=1e-4) or not isclose(e1[1], e2[1], rel_tol=1e-4):\n",
     "                print(\"=== mismatch found at index %i: %s != %s\" % (i, e1, e2))\n",
     "                return False\n",
     "        print(\"=== elements match, but lists don't match?!: %s != %s\" % (l1, l2))\n",
