--- a/spec_creation/Verify_rerouted_entries.ipynb
+++ b/spec_creation/Verify_rerouted_entries.ipynb
@@ -9,7 +9,7 @@
     "import json\n",
     "import polyline as pl\n",
     "import pandas as pd\n",
-    "from math import isclose"
+    "from pytest import approx"
    ]
   },
   {
@@ -116,10 +116,10 @@
     "        return False\n",
     "    else:\n",
     "        for i, (e1, e2) in enumerate(zip(l1, l2)):\n",
-    "            if not isclose(e1[0], e2[0], rel_tol=1e-4) or not isclose(e1[1], e2[1], rel_tol=1e-4):\n",
+    "            if e1 != approx(e2):\n",
     "                print(\"=== mismatch found at index %i: %s != %s\" % (i, e1, e2))\n",
     "                return False\n",
-    "        print(\"=== elements match, but lists don't match?!: %s != %s\" % (l1, l2))\n",
+    "        print(\"=== elements match, but lists don't match?!\") #: %s != %s\" % (l1, l2))\n",
     "        return False"
    ]
   },
