fix first branch using np.allclose

--- a/spec_creation/Verify_rerouted_entries.ipynb
+++ b/spec_creation/Verify_rerouted_entries.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import polyline as pl\n",
     "import pandas as pd\n",
-    "from pytest import approx"
+    "from math import isclose\n",
+    "import numpy as np"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +82,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking leg walk_to_caltrain in trip mtv_to_berkeley_sf_bart\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking leg commuter_rail_aboveground in trip mtv_to_berkeley_sf_bart\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking leg subway_underground in trip mtv_to_berkeley_sf_bart\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking leg walk_to_bus in trip mtv_to_berkeley_sf_bart\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking leg city_bus_short in trip mtv_to_berkeley_sf_bart\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking unimodal trip walk_urban_university\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking leg walk to the bikeshare location in trip berkeley_to_mtv_SF_express_bus\n",
+      "Trajectory is defined using polylines, includes polyline True\n",
+      "Checking leg ebike_bikeshare_urban_long in trip berkeley_to_mtv_SF_express_bus\n",
+      "Trajectory is defined using polylines, includes polyline True\n",
+      "Checking leg express_bus in trip berkeley_to_mtv_SF_express_bus\n",
+      "Trajectory is defined using polylines, includes polyline True\n",
+      "Checking leg walk_downtown_urban_canyon in trip berkeley_to_mtv_SF_express_bus\n",
+      "Trajectory is defined using polylines, includes polyline True\n",
+      "Checking leg light_rail_below_above_ground in trip berkeley_to_mtv_SF_express_bus\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking leg commuter_rail_with_tunnels in trip berkeley_to_mtv_SF_express_bus\n",
+      "Trajectory is defined using polyline, includes polyline True\n",
+      "Checking leg inner_suburb_downtown_walk in trip berkeley_to_mtv_SF_express_bus\n",
+      "Trajectory is defined using polyline, includes polyline True\n"
+     ]
+    }
+   ],
    "source": [
     "for t in combined_spec[\"evaluation_trips\"]:\n",
     "    if \"legs\" not in t:\n",
@@ -104,19 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_coordinates(l1, l2):\n",
-    "    if l1 == l2:\n",
-    "        return True\n",
-    "    elif len(l1) != len(l2):\n",
+    "    if len(l1) != len(l2):\n",
     "        print(\"=== list lengths don't match: %s != %s\" % (len(l1), len(l2)))\n",
     "        return False\n",
+    "    elif np.allclose(np.array(l1), np.array(l2)):\n",
+    "        return True\n",
     "    else:\n",
     "        for i, (e1, e2) in enumerate(zip(l1, l2)):\n",
-    "            if e1 != approx(e2):\n",
+    "            if not isclose(e1[0], e2[0], rel_tol=1e-8) or not isclose(e1[1], e2[1], rel_tol=1e-8):\n",
     "                print(\"=== mismatch found at index %i: %s != %s\" % (i, e1, e2))\n",
     "                return False\n",
     "        print(\"=== elements match, but lists don't match?!\") #: %s != %s\" % (l1, l2))\n",
@@ -125,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,9 +227,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg walk_to_caltrain in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
+      "Shim Leg wait_for_commuter_rail_aboveground has not been rerouted, check against original route = True\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg commuter_rail_aboveground in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
+      "Shim Leg tt_commuter_rail_aboveground_subway_underground has not been rerouted, check against original route = True\n",
+      "Shim Leg wait_for_subway_underground has not been rerouted, check against original route = True\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg subway_underground in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg walk_to_bus in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
+      "Shim Leg wait_for_city_bus_short has not been rerouted, check against original route = True\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg city_bus_short in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
+      "Shim Leg walk_end has not been rerouted, check against original route = True\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg walk_urban_university in trip walk_urban_university matches previous trajectories\n",
+      "True True True\n",
+      "True True\n",
+      "=== list lengths don't match: 42 != 28\n",
+      "=== list lengths don't match: 28 != 42\n",
+      "False False\n",
+      "!! Travel Leg walk to the bikeshare location in trip berkeley_to_mtv_SF_express_bus has invalid keys ['route_coords'] !!\n",
+      "True True\n",
+      "True True True\n",
+      "True True\n",
+      "Travel Leg ebike_bikeshare_urban_long in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
+      "Shim Leg tt_ebike_bikeshare_urban_long_express_bus has not been rerouted, check against original route = True\n",
+      "Shim Leg wait_for_express_bus has not been rerouted, check against original route = True\n",
+      "True True True\n",
+      "True True\n",
+      "True True\n",
+      "Travel Leg express_bus in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
+      "True True\n",
+      "True True True\n",
+      "True True\n",
+      "Travel Leg walk_downtown_urban_canyon in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
+      "Shim Leg wait_for_light_rail_below_above_ground has not been rerouted, check against original route = True\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg light_rail_below_above_ground in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
+      "Shim Leg tt_light_rail_below_above_ground_commuter_rail_with_tunnels has not been rerouted, check against original route = True\n",
+      "Shim Leg wait_for_commuter_rail_with_tunnels has not been rerouted, check against original route = True\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg commuter_rail_with_tunnels in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
+      "True True True\n",
+      "True True True\n",
+      "True True True\n",
+      "Travel Leg inner_suburb_downtown_walk in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n"
+     ]
+    }
+   ],
    "source": [
     "for ti, t in enumerate(combined_reroute[\"evaluation_trips\"]):\n",
     "    for li, l in enumerate(t[\"legs\"]):\n",
