passing verification checks

--- a/spec_creation/Verify_rerouted_entries.ipynb
+++ b/spec_creation/Verify_rerouted_entries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,42 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking leg walk_to_caltrain in trip mtv_to_berkeley_sf_bart\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking leg commuter_rail_aboveground in trip mtv_to_berkeley_sf_bart\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking leg subway_underground in trip mtv_to_berkeley_sf_bart\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking leg walk_to_bus in trip mtv_to_berkeley_sf_bart\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking leg city_bus_short in trip mtv_to_berkeley_sf_bart\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking unimodal trip walk_urban_university\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking leg walk to the bikeshare location in trip berkeley_to_mtv_SF_express_bus\n",
-      "Trajectory is defined using polylines, includes polyline True\n",
-      "Checking leg ebike_bikeshare_urban_long in trip berkeley_to_mtv_SF_express_bus\n",
-      "Trajectory is defined using polylines, includes polyline True\n",
-      "Checking leg express_bus in trip berkeley_to_mtv_SF_express_bus\n",
-      "Trajectory is defined using polylines, includes polyline True\n",
-      "Checking leg walk_downtown_urban_canyon in trip berkeley_to_mtv_SF_express_bus\n",
-      "Trajectory is defined using polylines, includes polyline True\n",
-      "Checking leg light_rail_below_above_ground in trip berkeley_to_mtv_SF_express_bus\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking leg commuter_rail_with_tunnels in trip berkeley_to_mtv_SF_express_bus\n",
-      "Trajectory is defined using polyline, includes polyline True\n",
-      "Checking leg inner_suburb_downtown_walk in trip berkeley_to_mtv_SF_express_bus\n",
-      "Trajectory is defined using polyline, includes polyline True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in combined_spec[\"evaluation_trips\"]:\n",
     "    if \"legs\" not in t:\n",
@@ -138,13 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_coordinates(l1, l2):\n",
+    "def check_coordinates(l1, l2, leg_id=None):\n",
     "    if len(l1) != len(l2):\n",
-    "        print(\"=== list lengths don't match: %s != %s\" % (len(l1), len(l2)))\n",
+    "        print(\"=== list lengths don't match for leg %s: %s != %s\" % (leg_id, len(l1), len(l2)))\n",
     "        return False\n",
     "    elif np.allclose(np.array(l1), np.array(l2)):\n",
     "        return True\n",
@@ -153,13 +120,13 @@
     "            if not isclose(e1[0], e2[0], rel_tol=1e-8) or not isclose(e1[1], e2[1], rel_tol=1e-8):\n",
     "                print(\"=== mismatch found at index %i: %s != %s\" % (i, e1, e2))\n",
     "                return False\n",
-    "        print(\"=== elements match, but lists don't match?!\") #: %s != %s\" % (l1, l2))\n",
+    "        print(\"=== elements match, but lists don't match?!: %s != %s\" % (l1, l2))\n",
     "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +135,7 @@
     "        orig_loc = original_route[\"evaluation_trips\"][ti][\"legs\"][li][\"loc\"]\n",
     "        combo_loc = l[\"loc\"][0]\n",
     "        # print(orig_loc[\"geometry\"][\"coordinates\"], combo_loc[\"geometry\"][\"coordinates\"])\n",
-    "        valid = check_coordinates(orig_loc[\"geometry\"][\"coordinates\"], combo_loc[\"geometry\"][\"coordinates\"])\n",
+    "        valid = check_coordinates(orig_loc[\"geometry\"][\"coordinates\"], combo_loc[\"geometry\"][\"coordinates\"], l[\"id\"])\n",
     "        if not valid:\n",
     "            print(\"!!! Shim Leg %s has not been rerouted, check against original route = %s!!!\" % (l[\"id\"], valid))\n",
     "        else:\n",
@@ -179,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,23 +157,23 @@
     "        # print(l[key][0][\"geometry\"][\"coordinates\"])\n",
     "        # print(orig_l[key][\"geometry\"][\"coordinates\"])\n",
     "        # No reroute. The combo fields should be equal to both original and rerouted fields, and they should be equal to each other\n",
-    "        combo_orig = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], orig_l[key][\"geometry\"][\"coordinates\"])\n",
-    "        combo_reroute = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"])\n",
-    "        orig_reroute = check_coordinates(orig_l[key][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        combo_orig = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], orig_l[key][\"geometry\"][\"coordinates\"], l[\"id\"])\n",
+    "        combo_reroute = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"], l[\"id\"])\n",
+    "        orig_reroute = check_coordinates(orig_l[key][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"], l[\"id\"])\n",
     "        print(combo_orig, combo_reroute, orig_reroute)\n",
     "        return combo_orig and combo_reroute and orig_reroute\n",
     "    if len(l[key]) > 1:\n",
     "        # Reroute. Only two reroutes supported. The first combo fields should be equal to original and the second should be the rerouted\n",
     "        assert len(l[key]) == 2, \"Only two reroutes at this time, so use a simple check\"\n",
-    "        combo_orig = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], orig_l[key][\"geometry\"][\"coordinates\"])\n",
-    "        combo_reroute = check_coordinates(l[key][1][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"])\n",
+    "        combo_orig = check_coordinates(l[key][0][\"geometry\"][\"coordinates\"], orig_l[key][\"geometry\"][\"coordinates\"], l[\"id\"])\n",
+    "        combo_reroute = check_coordinates(l[key][1][\"geometry\"][\"coordinates\"], reroute_l[key][\"geometry\"][\"coordinates\"], l[\"id\"])\n",
     "        print(combo_orig, combo_reroute)\n",
     "        return combo_orig and combo_reroute"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,80 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg walk_to_caltrain in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
-      "Shim Leg wait_for_commuter_rail_aboveground has not been rerouted, check against original route = True\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg commuter_rail_aboveground in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
-      "Shim Leg tt_commuter_rail_aboveground_subway_underground has not been rerouted, check against original route = True\n",
-      "Shim Leg wait_for_subway_underground has not been rerouted, check against original route = True\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg subway_underground in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg walk_to_bus in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
-      "Shim Leg wait_for_city_bus_short has not been rerouted, check against original route = True\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg city_bus_short in trip mtv_to_berkeley_sf_bart matches previous trajectories\n",
-      "Shim Leg walk_end has not been rerouted, check against original route = True\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg walk_urban_university in trip walk_urban_university matches previous trajectories\n",
-      "True True True\n",
-      "True True\n",
-      "=== list lengths don't match: 42 != 28\n",
-      "=== list lengths don't match: 28 != 42\n",
-      "False False\n",
-      "!! Travel Leg walk to the bikeshare location in trip berkeley_to_mtv_SF_express_bus has invalid keys ['route_coords'] !!\n",
-      "True True\n",
-      "True True True\n",
-      "True True\n",
-      "Travel Leg ebike_bikeshare_urban_long in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
-      "Shim Leg tt_ebike_bikeshare_urban_long_express_bus has not been rerouted, check against original route = True\n",
-      "Shim Leg wait_for_express_bus has not been rerouted, check against original route = True\n",
-      "True True True\n",
-      "True True\n",
-      "True True\n",
-      "Travel Leg express_bus in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
-      "True True\n",
-      "True True True\n",
-      "True True\n",
-      "Travel Leg walk_downtown_urban_canyon in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
-      "Shim Leg wait_for_light_rail_below_above_ground has not been rerouted, check against original route = True\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg light_rail_below_above_ground in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
-      "Shim Leg tt_light_rail_below_above_ground_commuter_rail_with_tunnels has not been rerouted, check against original route = True\n",
-      "Shim Leg wait_for_commuter_rail_with_tunnels has not been rerouted, check against original route = True\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg commuter_rail_with_tunnels in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n",
-      "True True True\n",
-      "True True True\n",
-      "True True True\n",
-      "Travel Leg inner_suburb_downtown_walk in trip berkeley_to_mtv_SF_express_bus matches previous trajectories\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for ti, t in enumerate(combined_reroute[\"evaluation_trips\"]):\n",
     "    for li, l in enumerate(t[\"legs\"]):\n",
