updated validation notebook with breaking test case for overlaps

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -290,6 +290,7 @@
     "                    if l[\"properties\"][\"valid_start_ts\"] >= route_start_ts\\\n",
     "                    and l[\"properties\"][\"valid_end_ts\"] <= route_end_ts]\n",
     "        \n",
+    "        assert len(start_locs) >= 1 and len(end_locs) >= 1, rc\n",
     "        for sl in start_locs:\n",
     "            start_contains = points.apply(lambda p: sl.contains(p))\n",
     "            print(points[start_contains])\n",
@@ -322,9 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "invalid_legs = []\n",
@@ -392,6 +391,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test case:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -401,9 +407,36 @@
     "    ranges = sorted([(l[\"properties\"][\"valid_start_ts\"], l[\"properties\"][\"valid_end_ts\"]) for l in x],\n",
     "                     key=lambda c: c[0])\n",
     "    for i, r in enumerate(ranges[:-1]):\n",
-    "        assert (ts1 := r[1]) <= (ts2 := ranges[i + 1][0]), f\"Overlapping timestamps: {ts1}, {ts2}\"\n",
+    "        assert (ts1 := r[1]) <= (ts2 := ranges[i + 1][0]), f\"Overlapping timestamps: {arrow.get(ts1)}, {arrow.get(ts2)}\"\n",
     "\n",
     "\n",
+    "breaking_sample = [\n",
+    "    {\n",
+    "        \"properties\": {\n",
+    "            \"valid_start_ts\": arrow.get(\"2020-01-01\").timestamp,\n",
+    "            \"valid_end_ts\": arrow.get(\"2020-03-30\").timestamp\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"properties\": {\n",
+    "            \"valid_start_ts\": arrow.get(\"2019-07-16\").timestamp,\n",
+    "            \"valid_end_ts\": arrow.get(\"2020-04-30\").timestamp\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "try:\n",
+    "    check_overlaps(breaking_sample)\n",
+    "except AssertionError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for t in evaluation_trips:\n",
     "    for l in t[\"legs\"]:\n",
     "        print(\"Checking leg %s, %s\" % (t[\"id\"], l[\"id\"]))\n",
