fix start/end polygon checks

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -280,17 +280,18 @@
     "        route_start_ts = rc[\"properties\"][\"valid_start_ts\"]\n",
     "        route_end_ts = rc[\"properties\"][\"valid_end_ts\"]\n",
     "        \n",
-    "        # query all start_locs that have start date >= route start date and end date <= route end date\n",
-    "        start_locs = [shpg.shape(l[\"geometry\"]) for l in leg[\"start_loc\"]\\\n",
-    "                      if l[\"properties\"][\"valid_start_ts\"] >= route_start_ts\\\n",
-    "                      and l[\"properties\"][\"valid_end_ts\"] <= route_end_ts]\n",
+    "        # query all start_locs and end_locs where [route_start_ts, route_end_ts] ∈ [loc_start_ts, loc_end_ts]\n",
+    "        start_locs = [shpg.shape(sl[\"geometry\"]) for sl in leg[\"start_loc\"]\n",
+    "                      if route_start_ts >= sl[\"properties\"][\"valid_start_ts\"]\\\n",
+    "                      and route_end_ts <= sl[\"properties\"][\"valid_end_ts\"]]\n",
     "        \n",
-    "        # query all end_locs that have start date >= route start date and end date <= route end date\n",
-    "        end_locs = [shpg.shape(l[\"geometry\"]) for l in leg[\"end_loc\"]\\\n",
-    "                    if l[\"properties\"][\"valid_start_ts\"] >= route_start_ts\\\n",
-    "                    and l[\"properties\"][\"valid_end_ts\"] <= route_end_ts]\n",
+    "        end_locs = [shpg.shape(el[\"geometry\"]) for el in leg[\"end_loc\"]\n",
+    "                    if route_start_ts >= el[\"properties\"][\"valid_start_ts\"]\\\n",
+    "                    and route_end_ts <= el[\"properties\"][\"valid_end_ts\"]]\n",
     "        \n",
-    "        assert len(start_locs) >= 1 and len(end_locs) >= 1, rc\n",
+    "        assert len(start_locs) >= 1\n",
+    "        assert len(end_locs) >= 1\n",
+    "        \n",
     "        for sl in start_locs:\n",
     "            start_contains = points.apply(lambda p: sl.contains(p))\n",
     "            print(points[start_contains])\n",
@@ -394,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test case:"
+    "Representative test case (should break):"
    ]
   },
   {
@@ -410,7 +411,7 @@
     "        assert (ts1 := r[1]) <= (ts2 := ranges[i + 1][0]), f\"Overlapping timestamps: {arrow.get(ts1)}, {arrow.get(ts2)}\"\n",
     "\n",
     "\n",
-    "breaking_sample = [\n",
+    "breaking_example = [\n",
     "    {\n",
     "        \"properties\": {\n",
     "            \"valid_start_ts\": arrow.get(\"2020-01-01\").timestamp,\n",
@@ -426,9 +427,16 @@
     "]\n",
     "\n",
     "try:\n",
-    "    check_overlaps(breaking_sample)\n",
+    "    check_overlaps(breaking_example)\n",
     "except AssertionError as e:\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Actual check of spec:"
    ]
   },
   {
